// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableHeader props onSort invoke onSort with property when HeadCell is clicked 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "name",
      Object {
        "target": "mock",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`TableHeader props onSort invoke onSort with property when HeadCell is clicked 2`] = `
<thead>
  <styled__StyledRow
    sticky={true}
  >
    <HeadCell
      cellStyle={
        Object {
          "width": "33%",
        }
      }
      components={
        Object {
          "HeadCell": [Function],
        }
      }
      key="name"
      onClick={[Function]}
      order={false}
      sortable={true}
    >
      Subject Name
    </HeadCell>
    <HeadCell
      cellStyle={Object {}}
      components={
        Object {
          "HeadCell": [Function],
        }
      }
      key="dob"
      onClick={[Function]}
      order={false}
      sortable={true}
    >
      Date of Birth
    </HeadCell>
    <HeadCell
      cellStyle={Object {}}
      components={
        Object {
          "HeadCell": [Function],
        }
      }
      key="manager"
      onClick={[Function]}
      order={false}
      sortable={true}
    >
      Manager
    </HeadCell>
    <HeadCell
      cellStyle={Object {}}
      components={
        Object {
          "HeadCell": [Function],
        }
      }
      key="lastUpdated"
      onClick={[Function]}
      order={false}
      sortable={true}
    >
      Last Updated
    </HeadCell>
    <HeadCell
      cellStyle={Object {}}
      components={
        Object {
          "HeadCell": [Function],
        }
      }
      key="id"
      order={false}
      sortable={false}
    >
      ID
    </HeadCell>
  </styled__StyledRow>
</thead>
`;

exports[`TableHeader props order and orderBy should pass order to HeadCell when orderBy matches header key 1`] = `
<thead>
  <styled__StyledRow
    sticky={true}
  >
    <HeadCell
      cellStyle={
        Object {
          "width": "33%",
        }
      }
      components={
        Object {
          "HeadCell": [Function],
        }
      }
      key="name"
      order="asc"
      sortable={true}
    >
      Subject Name
    </HeadCell>
    <HeadCell
      cellStyle={Object {}}
      components={
        Object {
          "HeadCell": [Function],
        }
      }
      key="dob"
      order={false}
      sortable={true}
    >
      Date of Birth
    </HeadCell>
    <HeadCell
      cellStyle={Object {}}
      components={
        Object {
          "HeadCell": [Function],
        }
      }
      key="manager"
      order={false}
      sortable={true}
    >
      Manager
    </HeadCell>
    <HeadCell
      cellStyle={Object {}}
      components={
        Object {
          "HeadCell": [Function],
        }
      }
      key="lastUpdated"
      order={false}
      sortable={true}
    >
      Last Updated
    </HeadCell>
    <HeadCell
      cellStyle={Object {}}
      components={
        Object {
          "HeadCell": [Function],
        }
      }
      key="id"
      order={false}
      sortable={false}
    >
      ID
    </HeadCell>
  </styled__StyledRow>
</thead>
`;

exports[`TableHeader render should render a thead at the root 1`] = `
<thead>
  <styled__StyledRow
    sticky={true}
  />
</thead>
`;

exports[`TableHeader render should render sortable HeadCells 1`] = `
<thead>
  <styled__StyledRow
    sticky={true}
  >
    <HeadCell
      cellStyle={
        Object {
          "width": "33%",
        }
      }
      components={
        Object {
          "HeadCell": [Function],
        }
      }
      key="name"
      order={false}
      sortable={true}
    >
      Subject Name
    </HeadCell>
    <HeadCell
      cellStyle={Object {}}
      components={
        Object {
          "HeadCell": [Function],
        }
      }
      key="dob"
      order={false}
      sortable={true}
    >
      Date of Birth
    </HeadCell>
    <HeadCell
      cellStyle={Object {}}
      components={
        Object {
          "HeadCell": [Function],
        }
      }
      key="manager"
      order={false}
      sortable={true}
    >
      Manager
    </HeadCell>
    <HeadCell
      cellStyle={Object {}}
      components={
        Object {
          "HeadCell": [Function],
        }
      }
      key="lastUpdated"
      order={false}
      sortable={true}
    >
      Last Updated
    </HeadCell>
    <HeadCell
      cellStyle={Object {}}
      components={
        Object {
          "HeadCell": [Function],
        }
      }
      key="id"
      order={false}
      sortable={false}
    >
      ID
    </HeadCell>
  </styled__StyledRow>
</thead>
`;
